added script that makes the buttons clicked visually changed

--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -122,37 +122,37 @@
     <div id="timelineContent" class="dflex fdr">
         <div id="timelineBar" class="bgBeige">
             <div id="alwaysFilled" class="timelineSectionBar bgRed dflex fdcr">
-                <button id="1928" class="timelineBall activeBall">
+                <button id="1928p" class="btnBall timelineBall activeBall">
                     <p class="m0 p0 IBM fontNormalSize beige">1928</p>
                 </button>
             </div>
             <div class="timelineSectionBar bgBeige dflex fdcr">
-                <button id="1933" class="timelineBall inactiveBall">
+                <button id="1933p" class="btnBall timelineBall inactiveBall">
                     <p class="m0 p0 IBM fontNormalSize beige">1933</p>
                 </button>
             </div>
             <div class="timelineSectionBar bgBeige dflex fdcr">
-                <button id="1945" class="timelineBall inactiveBall">
+                <button id="1945p" class="btnBall timelineBall inactiveBall">
                     <p class="m0 p0 IBM fontNormalSize beige">1945</p>
                 </button>
             </div>
             <div class="timelineSectionBar bgBeige dflex fdcr">
-                <button id="1958" class="timelineBall inactiveBall">
+                <button id="1958p" class="btnBall timelineBall inactiveBall">
                     <p class="m0 p0 IBM fontNormalSize beige">1958</p>
                 </button>
             </div>
             <div class="timelineSectionBar bgBeige dflex fdcr">
-                <button id="1961" class="timelineBall inactiveBall">
+                <button id="1961p" class="btnBall timelineBall inactiveBall">
                     <p class="m0 p0 IBM fontNormalSize beige">1961</p>
                 </button>
             </div>
             <div class="timelineSectionBar bgBeige dflex fdcr">
-                <button id="1968" class="timelineBall inactiveBall">
+                <button id="1968p" class="btnBall timelineBall inactiveBall">
                     <p class="m0 p0 IBM fontNormalSize beige">1968</p>
                 </button>
             </div>
             <div class="timelineSectionBar bgBeige dflex fdcr">
-                <button id="1974" class="timelineBall inactiveBall">
+                <button id="1974p" class="btnBall timelineBall inactiveBall">
                     <p class="m0 p0 IBM fontNormalSize beige">1974</p>
                 </button>
             </div>
@@ -189,37 +189,37 @@
     <div id="timelineContentM" class="dflex fdc aic">
         <div id="timelineBarM" class="w80 bgBeige dflex fdr">
             <div id="alwaysFilledM" class="timelineSectionBarM bgRed dflex fdrr">
-                <button id="1928" class="timelineBallM activeBall">
+                <button id="1928m" class="btnBall timelineBallM activeBall">
                     <p class="m0 p0 IBM">1928</p>
                 </button>
             </div>
             <div class="timelineSectionBarM bgBeige dflex fdrr">
-                <button id="1933" class="timelineBallM inactiveBall">
+                <button id="1933m" class="btnBall timelineBallM inactiveBall">
                     <p class="m0 p0 IBM">1933</p>
                 </button>
             </div>
             <div class="timelineSectionBarM bgBeige dflex fdrr">
-                <button id="1945" class="timelineBallM inactiveBall">
+                <button id="1945m" class="btnBall timelineBallM inactiveBall">
                     <p class="m0 p0 IBM">1945</p>
                 </button>
             </div>
             <div class="timelineSectionBarM bgBeige dflex fdrr">
-                <button id="1958" class="timelineBallM inactiveBall">
+                <button id="1958m" class="btnBall timelineBallM inactiveBall">
                     <p class="m0 p0 IBM">1958</p>
                 </button>
             </div>
             <div class="timelineSectionBarM bgBeige dflex fdrr">
-                <button id="1961" class="timelineBallM inactiveBall">
+                <button id="1961m" class="btnBall timelineBallM inactiveBall">
                     <p class="m0 p0 IBM">1961</p>
                 </button>
             </div>
             <div class="timelineSectionBarM bgBeige dflex fdrr">
-                <button id="1968" class="timelineBallM inactiveBall">
+                <button id="1968m" class="btnBall timelineBallM inactiveBall">
                     <p class="m0 p0 IBM">1968</p>
                 </button>
             </div>
             <div class="timelineSectionBarM bgBeige dflex fdrr">
-                <button id="1974" class="timelineBallM inactiveBall">
+                <button id="1974m" class="btnBall timelineBallM inactiveBall">
                     <p class="m0 p0 IBM">1974</p>
                 </button>
             </div>
@@ -293,5 +293,6 @@
     </footer>
 
     <script src="../javascript/everyPage.js"></script>
+    <script src="../javascript/materiaisEducativos.js"></script>
 </body>
 </html>
