added p5.js files and started p5.js coding to make a functional horizontal bar for filtering through game years

--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -15,6 +15,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Jersey+10&display=swap" rel="stylesheet">
+
+    <!-- P5.JS -->
+    <script src="../libraries/p5.min.js"></script>
+    <script src="../libraries/p5.sound.min.js"></script>
+    <script src="../javascript/jogosEducativos.js"></script>
 </head>
 <body class="bgGrey">
     <!-- NAVBAR -->
@@ -81,19 +86,23 @@
             </span>
         </div>
 
-        <div class="w80">
-            <div id="timelineBar" class="bgBeige">
+        <div id="timelineBarP5" class="w80">
+
+
+
+
+            <!-- <div id="timelineBar" class="bgBeige">
                 <div id="timelineBarFilled" class="dflex fdrr bgRed">
-                    <div id="timelineBall" class="dflex jcc bgRed">
+                    <div id="timelineBall" class="dflex jcc bgRed"> -->
                         <!-- this div is the red ball on timeline -->
 
-                        <p id="yearOnTimeline" class="m0 p0 IBM beige fontNormalSize">
-                            1944
+                        <!-- <p id="yearOnTimeline" class="m0 p0 IBM beige fontNormalSize">
+                            1944 -->
                             <!-- due to change with javascript -->
-                        </p>
+                        <!-- </p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -177,5 +186,6 @@
     </footer>
 
     <script src="../javascript/everyPage.js"></script>
+    <script src="../javascript/jogosEducativos.js"></script>
 </body>
 </html>
