transfering minigames created previously (by me aswell) to this project (started, not finished, need some polishing)

--- a/html/Jogo.html
+++ b/html/Jogo.html
@@ -19,7 +19,7 @@
     <!-- P5.JS -->
     <script src="../libraries/p5.min.js"></script>
     <script src="../libraries/p5.sound.min.js"></script>
-    <!-- <script src="../javascript/jogosEducativos.js"></script> -->
+    <script src="../javascript/jogo.js" type="module"></script>
 </head>
 <body class="bgGrey">
     <!-- NAVBAR -->
@@ -80,7 +80,7 @@
     <div id="divGame" class="wm">
         <p class="m0 p0 jersey beige fontSubtitleSize">Título jogo</p>
         
-        <div id="gameP5js" class="bgBeige">
+        <div id="gameP5js">
             <!-- GAME ADDED THROUGH P5.JS -->
         </div>
         
