--- a/html/Jogo.html
+++ b/html/Jogo.html
@@ -19,7 +19,7 @@
     <!-- P5.JS -->
     <script src="../libraries/p5.min.js"></script>
     <script src="../libraries/p5.sound.min.js"></script>
-    <script src="../javascript/jogo.js" type="module"></script>
+    <script src=".././javascript/jogo.js" type="module"></script>
 </head>
 <body class="bgGrey">
     <!-- NAVBAR -->
