connected the game chosen in the "jogos educativos" html, to the game that will show in the "jogo" html. Deleted the timeline bar.

--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -125,21 +125,19 @@
     <div id="gameSection" class="dflex fdc aic">
         <div id="gameList">
             <!-- each game panel -->
-            <div id="divGame">
-                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
-                <a href="Jogo.html">
-                    <div id="divGameImg" class="bgBeige"></div>
-                </a>
-            </div>
-            <div id="divGame">
+            <div id="game1" class="divGame">
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
-            <div id="divGame">
+            <div id="game" class="divGame">
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
-            <div id="divGame">
+            <div id="game" class="divGame">
+                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
+                <div id="divGameImg" class="bgBeige"></div>
+            </div>
+            <div id="game" class="divGame">
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
