--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -129,15 +129,15 @@
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
-            <div id="game" class="divGame">
+            <div id="game2" class="divGame">
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
-            <div id="game" class="divGame">
+            <div id="game3" class="divGame">
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
-            <div id="game" class="divGame">
+            <div id="game4" class="divGame">
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
