--- a/html/Jogo.html
+++ b/html/Jogo.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,6 +22,25 @@
     <script src=".././javascript/jogo.js" type="module"></script>
 </head>
 <body class="bgGrey">
+    <!-- WE'RE SORRY SCREEN -->
+    <div id="sorry" class="dflex jcc aic">
+        <div class="dflex fdc jcc aic">
+            <img src="../images/website/iconography/unavailable.png" width="30%">
+    
+            <br>
+            <p class="m0 jersey red fontOutlineBig fontSubtitleSize">Pedimos desculpa</p>
+            <p id="sorryTxt" class="m0 IBM beige fontNormalSize fontOutlineSmall">
+                Os minijogos só estão disponíveis em computador. <br>
+                Se já estás num computador, experimenta maximizar o ecrã ou usar outro navegador.
+            </p>
+            <br>
+            
+            <a href="../index.html" class="btnStart bgBeige dflex jcc aic">
+                <p class="m0 jersey red">Página inicial</p>
+            </a>
+        </div>
+    </div>
+
     <!-- NAVBAR -->
     <nav id="navbar" class="pa00 w100 dflex jcc">
         <div id="navbarContent" class="dflex jcsb aic">
