--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -133,7 +133,7 @@
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
-            <div id="game3" class="divGame">
+            <div id="basketFood" class="divGame">
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
