changed images locations and properly fixed their callbacks in each html

--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -26,7 +26,7 @@
     <nav id="navbar" class="pa00 w100 dflex jcc">
         <div id="navbarContent" class="dflex jcsb aic">
             <a id="logo" href="../index.html">
-                <img src="../images/cravo_logo.png" height="100%">
+                <img src="../images/website/iconography/cravo_logo.png" height="100%">
             </a>
     
             <div id="links" class="dflex fdr jcsb">
@@ -43,7 +43,7 @@
 
             <!-- menu hamburger -->
             <div id="iconHamburger">
-                <img src="../images/iconography/hamburger_menu.png" height="100%">
+                <img src="../images/website/iconography/hamburger_menu.png" height="100%">
             </div>
         </div>
     </nav>
@@ -53,7 +53,7 @@
     <nav aria-label="secundary" id="menuHamburger" class="bgBeige">
         <div class="dflex fdrr">
             <button id="btnCloseHamburger">
-                <img src="../images/iconography/close.png" height="30vh" alt="button that closes side hamburger bar">
+                <img src="../images/website/iconography/close.png" height="30vh" alt="button that closes side hamburger bar">
             </button>
         </div>
 
@@ -149,7 +149,7 @@
         <div id="footer">
             <div id="footerLeft">
                 <a href="../index.html" id="footerImg" class="bgBeige dflex jcc aie">
-                    <img src="../images/cravo_cropped.png" height="90%" alt="">
+                    <img src="../images/website/iconography/cravo_cropped.png" height="90%" alt="">
                 </a><br>
                 <p class="m0 jersey beige fontSubtitleSize2">Liberty <br> Breakout</p>
             </div>
