--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav aria-label="primary" id="navbar" class="pa00 w100 dflex jcc">
         <div id="navbarContent" class="dflex jcsb aic">
             <a id="logo" href="index.html">
-                <img src="images/cravo_logo.png" height="100%">
+                <img src="images/website/iconography/cravo_logo.png" height="100%">
             </a>
     
             <div id="links" class="dflex fdr jcsb">
@@ -38,7 +38,7 @@
 
             <!-- menu hamburger -->
             <div id="iconHamburger">
-                <img src="images/iconography/hamburger_menu.png" height="100%">
+                <img src="images/website/iconography/hamburger_menu.png" height="100%">
             </div>
         </div>
     </nav>
@@ -48,7 +48,7 @@
     <nav aria-label="secundary" id="menuHamburger" class="bgBeige">
         <div class="dflex fdrr">
             <button id="btnCloseHamburger">
-                <img src="images/iconography/close.png" alt="button that closes side hamburger bar">
+                <img src="images/website/iconography/close.png" alt="button that closes side hamburger bar">
             </button>
         </div>
 
@@ -85,7 +85,7 @@
 
             <a href="#" class="btnStart bgBeige dif jcsa">
                 <div id="btnStartImg" class="dif">
-                    <img src="images/cravo_cropped.png" width="100%">
+                    <img src="images/website/iconography/cravo_cropped.png" width="100%">
                 </div>
                 <div class="dflex aic">
                     <p class="m0 jersey red">COMEÇAR</p>
@@ -142,7 +142,7 @@
                 <div>
                     <a href="#" class="btnStart bgGrey dif jcsa">
                         <div id="btnStartImg" class="dif">
-                            <img src="images/cravo_cropped.png" width="100%">
+                            <img src="images/website/iconography/cravo_cropped.png" width="100%">
                         </div>
                         <div class="dflex aic">
                             <p class="m0 jersey red">JOGAR</p>
@@ -155,7 +155,7 @@
             <!-- arranjar forma de fazer esta imagem começar só a partir do
             meio vertical da página mas ocupar a altura a 100% do div
             onde esta está inclusa-->
-            <img id="section2Img" src="images/pgPrincipal2.png">
+            <img id="section2Img" src="images/website/images/pgPrincipal2.png">
         </div>
     </div>
 
@@ -179,7 +179,7 @@
             <div>
                 <a href="#" class="btnStart bgBeige dif jcsa">
                     <div id="btnStartImg" class="dif">
-                        <img src="images/cravo_cropped.png" width="100%">
+                        <img src="images/website/iconography/cravo_cropped.png" width="100%">
                     </div>
                     <div class="dflex aic">
                         <p class="m0 jersey red">SABER MAIS</p>
@@ -195,7 +195,7 @@
         <div id="footer">
             <div id="footerLeft">
                 <a href="index.html" id="footerImg" class="bgBeige dflex jcc aie">
-                    <img src="images/cravo_cropped.png" height="90%" alt="">
+                    <img src="images/website/iconography/cravo_cropped.png" height="90%" alt="">
                 </a><br>
                 <p class="m0 jersey beige fontSubtitleSize2">Liberty <br> Breakout</p>
             </div>
