--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -137,7 +137,7 @@
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
-            <div id="game4" class="divGame">
+            <div id="bricks" class="divGame">
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
