--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -129,7 +129,7 @@
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
-            <div id="game2" class="divGame">
+            <div id="persecution" class="divGame">
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
