changed name of "game1" to "censorship" for easier identification

--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -125,7 +125,7 @@
     <div id="gameSection" class="dflex fdc aic">
         <div id="gameList">
             <!-- each game panel -->
-            <div id="game1" class="divGame">
+            <div id="censorship" class="divGame">
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
