Bettered the UI in html JogosEducativos

--- a/html/JogosEducativos.html
+++ b/html/JogosEducativos.html
@@ -76,44 +76,36 @@
         </ul>
     </nav>
 
-    <!-- TIME LINE -->
+    <!-- INTRO TEXT -->
     <div id="timelineContent" class="dflex fdc aic"> <!-- je = Jogos Educativos -->
         <!-- INFO BUTTON -->
-        <div class="dflex fdr">
-            <p class="m0 p0 jersey beige fontSubtitleSize">LINHA DO TEMPO</p>
-            <span class="infoBtn dflex jcc aic">
+        <div id="titleIntroJogos" class="dflex fdr">
+            <p class="m0 p0 jersey beige fontSubtitleSize2">Relembrar para valorizar. Jogar para compreender.</p>
+            <!-- <span class="infoBtn dflex jcc aic">
                 <p class="m0 p0 IBM beige">?</p>
-            </span>
+            </span> -->
         </div>
 
-        <div id="timelineBarP5" class="w80">
-
-
-
-
-            <!-- <div id="timelineBar" class="bgBeige">
-                <div id="timelineBarFilled" class="dflex fdrr bgRed">
-                    <div id="timelineBall" class="dflex jcc bgRed"> -->
-                        <!-- this div is the red ball on timeline -->
-
-                        <!-- <p id="yearOnTimeline" class="m0 p0 IBM beige fontNormalSize">
-                            1944 -->
-                            <!-- due to change with javascript -->
-                        <!-- </p>
-                    </div>
-                </div>
-            </div> -->
+        <div id="introJogos">
+            <p id="txtIntroJogos" class="m0 IBM beige fontNormalSize">
+                Nesta página vais encontrar jogos que te mostram como era viver durante o Salazarismo e como,
+                pouco a pouco, se foi preparando o caminho para a revolução.
+                <br><br>
+                Tens à tua disposição duas secções de jogos distintas:
+                uma que <a href="#dailySection" id="aTxtIntroJogos" class="red">revela aspetos da vida quotidiana sob o regime</a>,
+                e outra que <a href="#revolutionSection" id="aTxtIntroJogos" class="red">acompanha o despertar da resistência e os eventos que levaram à Revolução de Abril</a>.
+            </p>
         </div>
     </div>
 
-    <!-- 1928 SECTION TITLE -->
+    <!-- VIDA DIÁRIA/DAILY LIFE SECTION TITLE -->
     <div class="dflex fdr jcc">
         <div class="dflex fdr jcsb aic w80">
             <div class="yearGameTitle">
                 <!-- <hr> -->
             </div>
 
-            <p class="m0 jersey red fontSubtitleSize">1928</p>
+            <p id="dailySection" class="m0 jersey red fontSubtitleSize">Vida em Ditadura</p>
 
             <div class="yearGameTitle2">
                 <!-- <hr> -->
@@ -121,24 +113,48 @@
         </div>
     </div>
 
-    <!-- 1928 SECTION GAME LIST -->
+    <!-- VIDA DIÁRIA/DAILY LIFE SECTION GAME LIST -->
     <div id="gameSection" class="dflex fdc aic">
         <div id="gameList">
             <!-- each game panel -->
             <div id="censorship" class="divGame">
-                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
-                <div id="divGameImg" class="bgBeige"></div>
+                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lápis azul</p>
+                <div id="divGameImg" class="bgBeige">
+                    <!-- <img src="../images/games/thumbnails/persecution_thumbnail.png.jpg" alt=""> -->
+                </div>
             </div>
             <div id="persecution" class="divGame">
-                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
-                <div id="divGameImg" class="bgBeige"></div>
+                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Fugitivo</p>
+                <div id="divGameImg"></div>
             </div>
             <div id="basketFood" class="divGame">
                 <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
-                <div id="divGameImg" class="bgBeige"></div>
+                <div id="divGameImg"></div>
             </div>
+        </div>
+    </div>
+
+    <!-- REVOLUCIONÁRIA / REVOLUTIONARY SECTION TITLE -->
+    <div class="dflex fdr jcc">
+        <div class="dflex fdr jcsb aic w80">
+            <div class="yearGameTitle">
+                <!-- <hr> -->
+            </div>
+
+            <p id="revolutionSection" class="m0 jersey red fontSubtitleSize">Revolucionário</p>
+
+            <div class="yearGameTitle2">
+                <!-- <hr> -->
+            </div>
+        </div>
+    </div>
+
+    <!-- VIDA DIÁRIA/DAILY LIFE SECTION GAME LIST -->
+    <div id="gameSection" class="dflex fdc aic">
+        <div id="gameList">
+            <!-- each game panel -->
             <div id="bricks" class="divGame">
-                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Lorem Ipsum</p>
+                <p id="divGameTitle" class="m0 IBM beige fontNormalSize">Demolição do muro</p>
                 <div id="divGameImg" class="bgBeige"></div>
             </div>
         </div>
