informational content in the html MateriaisEducativos is fully functional (only the information is missing)

--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -172,14 +172,14 @@
                     </p>
                 </div>
 
-                <div id="timelineDescriptionPages" class="dflex fdr jcc">
-                    <p id="pagesLeft" class="m0 p0 IBM fontNormalSize2 beige"><</p>
-                    <p id="pages1" class="m0 p0 IBM fontNormalSize2 red">1</p>
-                    <p id="pages2" class="m0 p0 IBM fontNormalSize2 beige">2</p>
-                    <p id="pages3" class="m0 p0 IBM fontNormalSize2 beige">3</p>
-                    <p id="pages4" class="m0 p0 IBM fontNormalSize2 beige">4</p>
-                    <p id="pages5" class="m0 p0 IBM fontNormalSize2 beige">5</p>
-                    <p id="pagesRight" class="m0 p0 IBM fontNormalSize2 beige">></p>
+                <div id="timelineDescriptionPages" class="timelineDescriptionPagesP dflex fdr jcc">
+                    <p id="arrow" class="m0 p0 IBM fontNormalSize2 beige"><</p>
+                    <p id="1" class="m0 p0 IBM fontNormalSize2 red">1</p>
+                    <p id="2" class="m0 p0 IBM fontNormalSize2 beige">2</p>
+                    <p id="3" class="m0 p0 IBM fontNormalSize2 beige">3</p>
+                    <p id="4" class="m0 p0 IBM fontNormalSize2 beige">4</p>
+                    <p id="5" class="m0 p0 IBM fontNormalSize2 beige">5</p>
+                    <p id="arrow" class="m0 p0 IBM fontNormalSize2 beige">></p>
                 </div>
             </div>
         </div>
