mobile version content is now fully interactable aswell

--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -118,8 +118,8 @@
         </div>
     </div>
 
-    <!-- TIMELINE (devices != mobile) -->
-    <div id="timelineContent" class="dflex fdr">
+    <div id="timelineContent">
+        <!-- NON-MOBILE DEVICE TIMELINE -->
         <div id="timelineBar" class="bgBeige">
             <div id="alwaysFilled" class="timelineSectionBar bgRed dflex fdcr">
                 <button id="1928p" class="btnBall timelineBall activeBall">
@@ -158,35 +158,7 @@
             </div>
         </div>
 
-        <!-- respective year info content -->
-        <div id="timelineDescriptionBg">
-            <div id="timelineDescription" class="dflex fdc aic jcsb">
-                <div>
-                    <p id="timelineTxtTitle" class="m0 p0 jersey fontTitleSize red">Lorem Ipsum</p>
-                    <p id="timelineTxtYear" class="m0 p0 IBM fontSubtitleSize2 beige">1928</p>
-
-                    <p id="timelineTxt" class="m0 IBM beige fontNormalSize">
-                        Integer faucibus tellus sem, quis pellentesque tellus commodo sit amet. Duis nec auctor mi. Integer ut cursus mi. Vivamus malesuada enim ac suscipit interdum. Pellentesque in dolor ultricies, accumsan eros id, aliquam orci.
-                        <br><br>
-                        Vestibulum tristique justo sed mauris rhoncus, eu pulvinar nisi mattis. Phasellus eu semper odio. Phasellus eu risus eget risus vulputate semper ac nec nibh.
-                    </p>
-                </div>
-
-                <div id="timelineDescriptionPages" class="timelineDescriptionPagesP dflex fdr jcc">
-                    <p id="arrow" class="m0 p0 IBM fontNormalSize2 beige"><</p>
-                    <p id="1" class="m0 p0 IBM fontNormalSize2 red">1</p>
-                    <p id="2" class="m0 p0 IBM fontNormalSize2 beige">2</p>
-                    <p id="3" class="m0 p0 IBM fontNormalSize2 beige">3</p>
-                    <p id="4" class="m0 p0 IBM fontNormalSize2 beige">4</p>
-                    <p id="5" class="m0 p0 IBM fontNormalSize2 beige">5</p>
-                    <p id="arrow" class="m0 p0 IBM fontNormalSize2 beige">></p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- TIMELINE (for mobile devices) -->
-    <div id="timelineContentM" class="dflex fdc aic">
+        <!-- MOBILE DEVICE TIMELINE -->
         <div id="timelineBarM" class="w80 bgBeige dflex fdr">
             <div id="alwaysFilledM" class="timelineSectionBarM bgRed dflex fdrr">
                 <button id="1928m" class="btnBall timelineBallM activeBall">
@@ -225,7 +197,8 @@
             </div>
         </div>
 
-        <div id="timelineDescriptionBgM">
+        <!-- respective year info content -->
+        <div id="timelineDescriptionBg">
             <div id="timelineDescription" class="dflex fdc aic jcsb">
                 <div>
                     <p id="timelineTxtTitle" class="m0 p0 jersey fontTitleSize red">Lorem Ipsum</p>
@@ -238,14 +211,14 @@
                     </p>
                 </div>
 
-                <div id="timelineDescriptionPages" class="dflex fdr jcc">
-                    <p id="pagesLeft" class="m0 p0 IBM fontNormalSize2 beige"><</p>
-                    <p id="pages1" class="m0 p0 IBM fontNormalSize2 red">1</p>
-                    <p id="pages2" class="m0 p0 IBM fontNormalSize2 beige">2</p>
-                    <p id="pages3" class="m0 p0 IBM fontNormalSize2 beige">3</p>
-                    <p id="pages4" class="m0 p0 IBM fontNormalSize2 beige">4</p>
-                    <p id="pages5" class="m0 p0 IBM fontNormalSize2 beige">5</p>
-                    <p id="pagesRight" class="m0 p0 IBM fontNormalSize2 beige">></p>
+                <div id="timelineDescriptionPages" class="timelineDescriptionPagesP dflex fdr jcc">
+                    <p id="arrow" class="m0 p0 IBM fontNormalSize2 beige"><</p>
+                    <p id="1" class="m0 p0 IBM fontNormalSize2 red">1</p>
+                    <p id="2" class="m0 p0 IBM fontNormalSize2 beige">2</p>
+                    <p id="3" class="m0 p0 IBM fontNormalSize2 beige">3</p>
+                    <p id="4" class="m0 p0 IBM fontNormalSize2 beige">4</p>
+                    <p id="5" class="m0 p0 IBM fontNormalSize2 beige">5</p>
+                    <p id="arrow" class="m0 p0 IBM fontNormalSize2 beige">></p>
                 </div>
             </div>
         </div>
