added the characters representative/impacted of the/by the period of Salazar. Added a page which purpose is to eventually load information of each character, depending on who the user clicked on

--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -88,11 +88,35 @@
                 Clica num personagem/grupo e aprende mais sobre as suas funcionalidades e relevâncias neste período de tempo.
             </p>
 
-            <div id="figuresImgDiv" class="w100 dflex fdr">
-                <a class="bgBeige">
+            <div id="figuresImgDiv" class="w100">
+                <a id="girl" class="charBtn bgBeige">
                     <!-- figure image -->
                 </a>
-                <a class="bgBeige">
+                <a id="boy" class="charBtn bgBeige">
+                    <!-- figure image -->
+                </a>
+                <a id="woman" class="charBtn bgBeige">
+                    <!-- figure image -->
+                </a>
+                <a id="poorMan" class="charBtn bgBeige">
+                    <!-- figure image -->
+                </a>
+                <a id="humbergo" class="charBtn bgBeige">
+                    <!-- figure image -->
+                </a>
+                <a id="military" class="charBtn bgBeige">
+                    <!-- figure image -->
+                </a>
+                <a id="richMan" class="charBtn bgBeige">
+                    <!-- figure image -->
+                </a>
+                <a id="PIDE" class="charBtn bgBeige">
+                    <!-- figure image -->
+                </a>
+                <a id="marcello" class="charBtn bgBeige">
+                    <!-- figure image -->
+                </a>
+                <a id="salazar" class="charBtn bgBeige">
                     <!-- figure image -->
                 </a>
             </div>
