html individuo fully logically interactive

--- a/html/Individuo.html
+++ b/html/Individuo.html
@@ -26,10 +26,10 @@
     
             <div id="links" class="dflex fdr jcsb">
                 <a href="JogosEducativos.html" class="btnNavbar">
-                    <p class="m0 jersey beige fontOutline navlinkActive">Jogos Educativos</p>
+                    <p class="m0 jersey beige fontOutline navlinkInactive">Jogos Educativos</p>
                 </a>
                 <a href="MateriaisEducativos.html" class="btnNavbar">
-                    <p class="m0 jersey beige fontOutline navlinkInactive">Materiais Educativos</p>
+                    <p class="m0 jersey beige fontOutline navlinkActive">Materiais Educativos</p>
                 </a>
                 <a href="SobreProjeto.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkInactive">Sobre o Projeto</p>
@@ -76,7 +76,7 @@
         <div id="charImgAndInfo" class="bgBeige">
             <div id="charImg" class="dflex jcc">
                 <!-- image -->
-                <img src="../../images/website/images/char_girl.png" height="100%">
+                <img id="charImgSrc" src="../../images/website/images/char_girl.png" height="100%">
             </div>
             <div id="charInfoDiv" class="dflex fdc jcsb">
                 <li id="charInfo" class="m0 IBM fontNormalSize">
@@ -148,5 +148,6 @@
     </footer>
 
     <script src="../javascript/everyPage.js"></script>
+    <script src="../javascript/individuo.js"></script>
 </body>
 </html>
