--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -101,7 +101,7 @@
                 <a id="poorMan" class="charBtn bgBeige">
                     <!-- figure image -->
                 </a>
-                <a id="humbergo" class="charBtn bgBeige">
+                <a id="humberto" class="charBtn bgBeige">
                     <!-- figure image -->
                 </a>
                 <a id="military" class="charBtn bgBeige">
