html individuo bettered interactive-wise. Added info about Salazar

--- a/html/Individuo.html
+++ b/html/Individuo.html
@@ -76,7 +76,7 @@
         <div id="charImgAndInfo" class="bgBeige">
             <div id="charImg" class="dflex jcc">
                 <!-- image -->
-                <img id="charImgSrc" src="../../images/website/images/char_girl.png" height="100%">
+                <!-- <img id="charImgSrc" src="../../images/website/images/char_girl.png" width="100%"> -->
             </div>
             <div id="charInfoDiv" class="dflex fdc jcsb">
                 <li id="charInfo" class="m0 IBM fontNormalSize">
@@ -94,7 +94,7 @@
             </div>
         </div>
 
-        <div id="charAbout" class="bgBeige">
+        <div id="charAbout" class="bgBeige dflex fdc jcsb">
             <div id="charHeader" class="dflex jcsb">
                 <p id="charTitle" class="m0 p0 jersey red fontSubtitleSize2">Criança</p>
                 <img id="charGoBack" src="../images/website/iconography/close.png">
@@ -103,6 +103,11 @@
             <p id="charText" class="m0 IBM fontNormalSize">
                 Lorem
             </p>
+
+            <div class="dflex fdr jcc" id="pages">
+                <p id="page1" class="active m0 IBM fontNormalSize">1</p>
+                <p id="page2" class="inactive m0 IBM fontNormalSize">2</p>
+            </div>
         </div>
     </div>
 
