removed question marks in MateraisEducativos. Added the military content

--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -77,9 +77,9 @@
             <!-- INFO BUTTON -->
             <div class="dflex fdr">
                 <p class="m0 p0 jersey beige fontSubtitleSize">Figuras/Grupos Importantes</p>
-                <span class="infoBtn dflex jcc aic">
+                <!-- <span class="infoBtn dflex jcc aic">
                     <p class="m0 p0 IBM beige">?</p>
-                </span>
+                </span> -->
             </div>
 
             <p id="figuresTxt" class="m0 IBM beige fontNormalSize">
@@ -107,9 +107,6 @@
                 <a id="military" class="charBtn bgBeige">
                     <!-- figure image -->
                 </a>
-                <a id="richMan" class="charBtn bgBeige">
-                    <!-- figure image -->
-                </a>
                 <a id="PIDE" class="charBtn bgBeige">
                     <!-- figure image -->
                 </a>
@@ -129,9 +126,9 @@
             <!-- INFO BUTTON -->
             <div class="dflex fdr">
                 <p class="m0 p0 jersey beige fontSubtitleSize">Linha do Tempo</p>
-                <span class="infoBtn dflex jcc aic">
+                <!-- <span class="infoBtn dflex jcc aic">
                     <p class="m0 p0 IBM beige">?</p>
-                </span>
+                </span> -->
             </div>
 
             <p id="timelineIntro" class="m0 IBM beige fontNormalSize">
