portuguese changes in index, added connections to other pages. Testing a new connection on navbar to a new possible page. Changed name of the website to "Liberdade Cravada"

--- a/html/Jogo.html
+++ b/html/Jogo.html
@@ -120,7 +120,7 @@
                 <a href="../index.html" id="footerImg" class="bgBeige dflex jcc aie">
                     <img src="../images/website/iconography/cravo_cropped.png" height="90%" alt="">
                 </a><br>
-                <p class="m0 jersey beige fontSubtitleSize2">Liberty <br> Breakout</p>
+                <p class="m0 jersey beige fontSubtitleSize2">Liberdade <br> Cravada</p>
             </div>
 
             <div id="footerMiddleRight">
