--- a/html/MateriaisEducativos.html
+++ b/html/MateriaisEducativos.html
@@ -63,6 +63,11 @@
                     <p class="m0 jersey red navlinkActive">Materiais Educativos</p>
                 </a>
             </li>
+            <!-- <li>
+                <a role="menuitem" href="SobreProjeto.html">
+                    <p class="m0 jersey grey navlinkInactiveHamburger">Participação Política</p>
+                </a>
+            </li> -->
             <li>
                 <a role="menuitem" href="SobreProjeto.html">
                     <p class="m0 jersey grey navlinkInactiveHamburger">Sobre o Projeto</p>
@@ -252,7 +257,7 @@
                 <a href="../index.html" id="footerImg" class="bgBeige dflex jcc aie">
                     <img src="../images/website/iconography/cravo_cropped.png" height="90%" alt="">
                 </a><br>
-                <p class="m0 jersey beige fontSubtitleSize2">Liberty <br> Breakout</p>
+                <p class="m0 jersey beige fontSubtitleSize2">Liberdade <br> Cravada</p>
             </div>
 
             <div id="footerMiddleRight">
