--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liberty Breakout</title>
+    <title>Liberdade Cravada</title>
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style/style.css">
@@ -30,6 +30,9 @@
                 </a>
                 <a href="html/MateriaisEducativos.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkInactive">Materiais Educativos</p>
+                </a>
+                <a href="html/MateriaisEducativos.html" class="btnNavbar">
+                    <p class="m0 jersey beige fontOutline navlinkInactive">Eleições Pós-Revolução</p>
                 </a>
                 <a href="html/SobreProjeto.html" class="btnNavbar">
                     <p class="m0 jersey beige fontOutline navlinkInactive">Sobre o Projeto</p>
@@ -77,20 +80,20 @@
     <!-- SECTION 1 // main div -->
     <div id="section1" class="dflex fdc jcc">
         <div id="section1Content">
-            <p id="mainTitle" class="m0 jersey beige fontOutlineBig">LIBERTY <br> BREAKOUT</p>
-            <p id="mainTitleVertical" class="m0 jersey beige fontOutlineBig">LIBERTY BREAKOUT</p>
+            <p id="mainTitle" class="m0 jersey beige fontOutlineBig">LIBERDADE CRAVADA</p>
+            <p id="mainTitleVertical" class="m0 jersey beige fontOutlineBig">LIBERDADE CRAVADA</p>
 
             <p id="mainTxt" class="m0 IBM beige fontNormalSize fontOutlineSmall">Explora "Liberdade Cravada" e revê a jornada histórica que moldou Portugal.</p>
             <br>
 
-            <a href="#" class="btnStart bgBeige dif jcsa">
+            <!-- <a href="#" class="btnStart bgBeige dif jcsa">
                 <div id="btnStartImg" class="dif">
                     <img src="images/website/iconography/cravo_cropped.png" width="100%">
                 </div>
                 <div class="dflex aic">
                     <p class="m0 jersey red">COMEÇAR</p>
                 </div>
-            </a>
+            </a> -->
         </div>
     </div>
 
@@ -140,7 +143,7 @@
 
                 <!-- BUTTON PLAY / "JOGAR" -->
                 <div>
-                    <a href="#" class="btnStart bgGrey dif jcsa">
+                    <a href="html/JogosEducativos.html" class="btnStart bgGrey dif jcsa">
                         <div id="btnStartImg" class="dif">
                             <img src="images/website/iconography/cravo_cropped.png" width="100%">
                         </div>
@@ -166,7 +169,7 @@
 
         <div id="section3Content" class="dflex fdc jcc aic">
             <p class="m0 IBM fontNormalSize beige">
-                Na página de Materiais Educativo, terás acesso a fichas e informações relevantes que te ajudarão a compreender melhor a importância do 25 de Abril e a conquista dos direitos que moldaram a democracia em Portugal.
+                Na página de Materiais Educativos, terás acesso a fichas e informações relevantes que te ajudarão a compreender melhor a importância do 25 de Abril e a conquista dos direitos que moldaram a democracia em Portugal.
             </p>
 
             <div id="section3Images" class="dflex fdr jcsb">
@@ -177,7 +180,7 @@
 
             <!-- BUTTON "SABER MAIS" -->
             <div>
-                <a href="#" class="btnStart bgBeige dif jcsa">
+                <a href="html/MateriaisEducativos.html" class="btnStart bgBeige dif jcsa">
                     <div id="btnStartImg" class="dif">
                         <img src="images/website/iconography/cravo_cropped.png" width="100%">
                     </div>
@@ -197,7 +200,7 @@
                 <a href="index.html" id="footerImg" class="bgBeige dflex jcc aie">
                     <img src="images/website/iconography/cravo_cropped.png" height="90%" alt="">
                 </a><br>
-                <p class="m0 jersey beige fontSubtitleSize2">Liberty <br> Breakout</p>
+                <p class="m0 jersey beige fontSubtitleSize2">Liberdade <br> Cravada</p>
             </div>
 
             <div id="footerMiddleRight">
