both selects connected, 2nd select that is dependent of the first one gets the information correctly

--- a/html/EleicoesPosRevolucao.html
+++ b/html/EleicoesPosRevolucao.html
@@ -162,7 +162,7 @@
                 </select>
 
                 <label for="sltPartido" class="m0 IBM fontNormalSize2">Escolha os anos que quer comparar:</label>
-                <select id="sltPartido" class="IBM">
+                <select id="sltPartidoYear" class="IBM">
                     <option value="">Seleciona um partido primeiro</option>
                     <!-- options added thro javascript -->
                 </select>
