pie properly working

--- a/html/EleicoesPosRevolucao.html
+++ b/html/EleicoesPosRevolucao.html
@@ -166,6 +166,8 @@
                     <option value="">Seleciona um partido primeiro</option>
                     <!-- options added thro javascript -->
                 </select>
+
+                <button id="btnAdd" class="bgBeige">Adicionar ano</button>
             </form>
 
             <div id="pie"></div>
